# spqr-rust

./: Cargo.toml
include/: ogdf_compat.hpp  sp_compress.h  spqr_compat.hpp  spqr_rust_wrapper.hpp  spqr_tree.h
src/: ffi.rs  lib.rs  spqr_format.rs
src/sp_compress/: adj.rs  arena.rs  ffi.rs  integration.rs  iso.rs  mod.rs  pmap.rs  reconstruct.rs  reduction.rs  types.rs
tests/: brute_force.rs
