[package]
name = "spqr-rust"
version = "0.1.0"
edition = "2021"
description = "SPQR-tree decomposition library"
authors = ["Corentin Moumard <corentin.moumard@helsinki.fi>"]
license = "MIT"
repository = "https://github.com/algbio/spqr-rust"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = 1

[profile.release-lib]
inherits = "release"
lto = "fat"
panic = "abort"

[[bin]]
name = "spqr_cli"
path = "src/bin/spqr_cli.rs"

[dev-dependencies]
rand = "0.8.5"

[dependencies]
# Reading and writing compressed files
flate2 = "1.1.9"